- code cleanup